# CiteParserService

./: .gitignore  CMakeLists.txt  README.md  token.ini
.libs/: libcrfpp.lai
.libs/src/CRF++-0.58/: Makefile  config.status  crf_learn  crf_test  libcrfpp.la  libtool
.libs/src/CRF++-0.58/.libs/: crf_learn  crf_test  libcrfpp.so.0.0.0
cli/java/CiteParserClient/: .project
cli/java/CiteParserClient/src/com/argcv/cite/model/: CitationItem.java
cli/java/CiteParserClient/src/com/argcv/cite/service/: CitationReader.java
db/: dict.db
include/: citpred.h  common.h  crftctl.h  crftfun.h  debuginfo.h  dict.h  dirtrav.h  eftctl.h  eftfun.h  hftctl.h  hftnpse.h  minEditDistance.h  myMath.h  persistence.h  queue.h  strHandle.h  tokens.h  virtualcontent.h
lib/: CMakeLists.txt
lib/cite_parser/: CMakeLists.txt  citpred.cc  common.c  crftctl.c  crftfun.c  debuginfo.c  dict.c  eftctl.c  eftfun.c  hftctl.c  hftnpse.c  minEditDistance.c  myMath.c  persistence.c  queue.c  strHandle.c  tokens.c  virtualcontent.c
lib/dirtrav/: CMakeLists.txt  dirtrav.c
lib/iniparser/: CMakeLists.txt
lib/json/: CMakeLists.txt
lib/sqlite3/: CMakeLists.txt
src/: CMakeLists.txt  citepd.cc  cpcli.cc  main.cc  ng.cc  ngcli.cc
test/: f.txt
