# lib list
ADD_SUBDIRECTORY(argcvnw)
ADD_SUBDIRECTORY(dirtrav)
ADD_SUBDIRECTORY(iniparser)
ADD_SUBDIRECTORY(json)
ADD_SUBDIRECTORY(sqlite3)
ADD_SUBDIRECTORY(cite_parser)

#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib/argcvnw)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib/dirtrav)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib/iniparser)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib/json)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib/sqlite3)
#LINK_DIRECTORIES(${PROJECT_BINARY_DIR}/lib/cite_parser)

