SET(LIBDIR_TRAV_VERSION 1.0)
SET(LIBDIR_TRAV_SOVERSION 0.1)

SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -O3 -Wall -std=gnu99")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O3 -Wall -std=c++11")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(. LIBDIR_TRAV_SRC)

# DIR_TRAV start
# SET(LIBDIR_TRAV_SRC dirtrav.c)
ADD_LIBRARY(dirtrav SHARED ${LIBDIR_TRAV_SRC})
SET_TARGET_PROPERTIES(dirtrav PROPERTIES VERSION ${LIBDIR_TRAV_VERSION} SOVERSION ${LIBDIR_TRAV_SOVERSION})

#TARGET_LINK_LIBRARIES(dirtrav error)
#TARGET_LINK_LIBRARIES(dirtrav_s dirtrav)


ADD_LIBRARY(dirtrav_s STATIC ${LIBDIR_TRAV_SRC})

SET_TARGET_PROPERTIES(dirtrav_s PROPERTIES OUTPUT_NAME "dirtrav")


INSTALL (TARGETS dirtrav dirtrav_s
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/dirtrav.h DESTINATION include/)

# DIR_TRAV end




