SET(LIBSQLITE3_VERSION 3.0)
SET(LIBSQLITE3_SOVERSION 1.0)

SET(CMAKE_C_FLAGS "$ENV{CFLAGS} -O4 -std=c99")
SET(CMAKE_CXX_FLAGS "$ENV{CXXFLAGS} -O4 -std=c++11")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

AUX_SOURCE_DIRECTORY(. LIBSQLITE3_SRC)

# SQLITE3 start
# SET(LIBSQLITE3_SRC sqlite3.c)
ADD_LIBRARY(sqlite3 SHARED ${LIBSQLITE3_SRC})
SET_TARGET_PROPERTIES(sqlite3 PROPERTIES VERSION ${LIBSQLITE3_VERSION} SOVERSION ${LIBSQLITE3_SOVERSION})

#TARGET_LINK_LIBRARIES(sqlite3 error)
#TARGET_LINK_LIBRARIES(sqlite3_s sqlite3)


ADD_LIBRARY(sqlite3_s STATIC ${LIBSQLITE3_SRC})

SET_TARGET_PROPERTIES(sqlite3_s PROPERTIES OUTPUT_NAME "sqlite3")


INSTALL (TARGETS sqlite3 sqlite3_s
    LIBRARY DESTINATION lib64
    ARCHIVE DESTINATION lib64)

INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/sqlite3.h DESTINATION include/)
INSTALL (FILES ${PROJECT_SOURCE_DIR}/include/sqlite3ext.h DESTINATION include/)

# SQLITE3 end




